Simplify code using Java 8 features.
In particular, every anonymous Predicate and Function has been replaced
with lambdas, and the java.util.stream APIs are used aggressively.

Migrated from Sable/mclab@e3a7f920ac705724aff6ab33770c0cc25817d297